# animescraper

./: Cargo.toml  all.json
.github/workflows/: rust.yml
src/: main.rs  model.rs
