[package]
name = "animescraper"
version = "0.1.0"
authors = ["Alsan Ali <morrutplz@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
futures = "0.3"
reqwest = "0.11"
scraper = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.4", features = ["full"] }